--- a/dubbo-demo/dubbo-demo-api/pom.xml
+++ b/dubbo-demo/dubbo-demo-api/pom.xml
@@ -28,4 +28,11 @@
 	<properties>
 		<skip_maven_deploy>true</skip_maven_deploy>
 	</properties>
+    <dependencies>
+    <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>dubbo-common</artifactId>
+        <version>${project.parent.version}</version>
+    </dependency>
+    </dependencies>
 </project>
